--- a/kubernetes/cluster/rocketmq-broker-slave-prod.yaml
+++ b/kubernetes/cluster/rocketmq-broker-slave-prod.yaml
@@ -91,7 +91,7 @@ spec:
         volumeMounts:
         - name: host-volume-rocketmq-broker-slave-prod
           mountPath: /opt/rocketmq/store
-        - name: host-volume-rocketmq-broker-slave-prod
+        - name: entrypoint
           mountPath: /opt/rocketmq-4.3.1/bin/entrypoint.sh
         readinessProbe:
           tcpSocket:
@@ -122,7 +122,7 @@ spec:
       restartPolicy: Always
       
       volumes:
-      - name: host-volume-rocketmq-broker-slave-prod
+      - name: entrypoint
         hostPath:
           path: /opt/rocketmq-4.3.1/bin/entrypoint_slave.sh
           
