--- a/kubernetes/cluster/rocketmq-broker-master-prod.yaml
+++ b/kubernetes/cluster/rocketmq-broker-master-prod.yaml
@@ -126,7 +126,7 @@ spec:
       volumes:
       - name: entrypoint
         hostPath:
-          path: /opt/rocketmq-4.3.1/bin/entrypoint_master.sh
+          path: /opt/rocketmq-4.3.1/bin/entrypoint.sh
           
   volumeClaimTemplates:
   - metadata:
