--- a/kubernetes/cluster/rocketmq-broker-master-prod.yaml
+++ b/kubernetes/cluster/rocketmq-broker-master-prod.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
   NAME_SRV_ADDR: "statefulset-rocketmq-namesrv-prod-0.service-rocketmq-namesrv-prod.rocketmq:9876;statefulset-rocketmq-namesrv-prod-1.service-rocketmq-namesrv-prod.rocketmq:9876"
   BROKER_ID: "0"
-  BROKER_ROLE: "ASYNC_MASTER"
+  BROKER_ROLE: "SYNC_MASTER"
   STATEFULSET_NAME: "statefulset-rocketmq-broker-master-prod"
   SEND_MESSAGE_THREAD_POOL_NUMS: "128"
 ---
