--- a/kubernetes/cluster/rocketmq-namesrv-prod.yaml
+++ b/kubernetes/cluster/rocketmq-namesrv-prod.yaml
@@ -42,7 +42,7 @@ spec:
         node-role.kubernetes.io/rocketmq: "true"
 
       containers:
-      - image: registry.cn-hangzhou.aliyuncs.com/szss/rocketmq-namesrv:v4.3.1
+      - image: 15214338239/rocketmq-namesrv:v4.3.1
         securityContext:
           privileged: true
         imagePullPolicy: Always
